--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: sqlite3
+  adapter: nulldb
   encoding: unicode
   reconnect: false
   database: helloworld_development
@@ -28,7 +28,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
+  adapter: nulldb
   encoding: utf8
   reconnect: false
   database: helloworld_test
@@ -38,7 +38,7 @@ test:
   host: localhost
 
 production:
-  adapter: postgresql
+  adapter: nulldb
   encoding: unicode
 #  reconnect: false
   database: qjtuktxcno
