--- a/config/database.yml
+++ b/config/database.yml
@@ -14,36 +14,36 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-#development:
-#  adapter: nulldb
-#  encoding: unicode
-#  reconnect: false
-#  database: helloworld_development
-#  pool: 5
-#  username: root
-#  password:
-#  host: localhost
-#
-## Warning: The database defined as "test" will be erased and
-## re-generated from your development database when you run "rake".
-## Do not set this db to the same as development or production.
-#test:
-#  adapter: nulldb
-#  encoding: utf8
-#  reconnect: false
-#  database: helloworld_test
-#  pool: 5
-#  username: root
-#  password:
-#  host: localhost
-#
-#production:
-#  adapter: nulldb
-#  encoding: unicode
-#  reconnect: false
-#  database: helloworld
-#  pool: 5
-##  port: 5432
-#  username:
-#  password:
-#  host: localhost
+development:
+  adapter: nulldb
+  encoding: unicode
+  reconnect: false
+  database: helloworld_development
+  pool: 5
+  username: root
+  password:
+  host: localhost
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  adapter: nulldb
+  encoding: utf8
+  reconnect: false
+  database: helloworld_test
+  pool: 5
+  username: root
+  password:
+  host: localhost
+
+production:
+  adapter: nulldb
+  encoding: unicode
+  reconnect: false
+  database: helloworld
+  pool: 5
+#  port: 5432
+  username:
+  password:
+  host: localhost
